--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="photo.jpg " alt="Your Profile Picture" class="profile-picture">
+            <img src="photo1.jpg " alt="Your Profile Picture" class="profile-picture">
             <h1>Jayashree B</h1>
             <p>Am Bachelor of computer application</p>
         </div>
