--- a/index.html
+++ b/index.html
@@ -164,7 +164,8 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="B.jayashree resume.pdf" target="_blank" class="download-button">Download CV</a>
+            <a href="B. jayashree resume.pdf
+" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
